# SmartCalc

./: Makefile  README.md
backend/: qcustomplot.cpp  smartcalc.c  smartcalc.h  stack.c  stack.h
files/: readme.dvi
frontend/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/SmartCalc/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  refilldialog.cpp  refilldialog.h  refilldialog.ui  refillwindow.ui  withdrawdialog.cpp  withdrawdialog.h  withdrawdialog.ui
frontend/SmartCalc/.qt/: QtDeploySupport.cmake
tests/: main_test.c
tests/test_includes/: s21_tests.h
tests/tests/: test_smartcalc.c  test_smartcalc.h
